--- a/ui/style.css
+++ b/ui/style.css
@@ -32,11 +32,8 @@ body {
 .text-center{
     text-align:center;
 }
-
-ul{
-    margin:0 auto;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
