--- a/ui/style.css
+++ b/ui/style.css
@@ -32,8 +32,9 @@ body {
 .text-center{
     text-align:center;
 }
+
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+ list-style-type: square;
+ list-style-position: outside;
+ list-style-image: none;
 }
